fixed dropdown z-index

--- a/client/src/app/core/components/dropdown/dropdown.scss
+++ b/client/src/app/core/components/dropdown/dropdown.scss
@@ -34,7 +34,7 @@
 
   box-shadow: var(--shadow-md);
 
-  z-index: 100;
+  z-index: 300;
   max-height: 16rem;
   overflow-y: auto;
   overflow-x: hidden;
